
7.11  2016-11-29
  - Added EXPERIMENTAL close_idle_connections method to Mojo::Server::Daemon.
  - Improved one_tick method in Mojo::IOLoop to protect from recursion, similar
    to the start method.
  - Improved log attribute in Mojolicious making it easier to override default
    settings. (jberger)
  - Fixed a bug in Mojo::Server::Prefork where workers would accept keep-alive
    requests after a graceful shutdown had already been initiated.

7.10  2016-11-01
  - Added getopt function to Mojo::Util.

7.09  2016-10-22
  - Added every_header method to Mojo::Headers.
  - Fixed redirect bug in Mojo::UserAgent::Transactor.
  - Fixed a few proxy bugs in Mojo::UserAgent.

7.08  2016-09-23
  - Added -i and -o options to get command.
  - Updated jQuery to version 3.1.1.
  - Improved accuracy of finished_ok test in Test::Mojo.
  - Fixed state transition bug in Mojo::Transaction::HTTP that caused message
    bodies to be included in responses to HEAD requests.

7.07  2016-09-20
  - Fixed bug in Mojo::UserAgent::Transactor where 303 redirects would not be
    followed correctly with GET requests. (jberger)

7.06  2016-09-17
  - Fixed bug where Mojolicious::Renderer would wrap text in layouts.
  - Fixed a few test description encoding bugs in Test::Mojo.

7.05  2016-08-29
  - Fixed bug in Mojo::IOLoop::Subprocess where EV would steal the subprocess
    exit status.

7.04  2016-08-28
  - Added EXPERIMENTAL support for performing computationally expensive
    operations in subprocesses, without blocking the event loop. (jberger, sri)
  - Added EXPERIMENTAL module Mojo::IOLoop::Subprocess. (jberger, sri)
  - Added EXPERIMENTAL subprocess method to Mojo::IOLoop. (jberger, sri)
  - Improved many methods in Mojolicious::Controller to die more gracefully if
    the connection has already been closed.
  - Fixed bug where Mojo::UserAgent would try to follow redirects for CONNECT
    requests.

7.03  2016-08-17
  - Fixed packaging errors.

7.02  2016-08-17